--- a/task/templates/tasks/cliente.html
+++ b/task/templates/tasks/cliente.html
@@ -99,6 +99,15 @@
                 </div>
             </div>    
         <p>*Campo Obrigatório</p>  
+           {% if messages %}
+            <div>
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 </article>  
