--- a/task/templates/base.html
+++ b/task/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href ="{% static 'css/style1.css' %}">
+    <link rel="stylesheet" href ="{% static 'css/stylebase.css' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %} " alt="Símbolo de Justiça">
 
     <title>{% block title %}Meu Site{% endblock %}</title>
@@ -31,6 +31,9 @@
                 <li class="item-header">
                     <a href="{% url 'adicionar_processo' %}">Processo</a>
                 </li>
+                <li class="item-header">
+                    <a href="{% url 'autenticar_usuario'%}">Sair</a>
+                </li>
             </ul> 
         </nav>
 
@@ -49,7 +52,7 @@
     <div class="container">
 
   
-        <p id="ultima-linha">feito por Luana Karoline e Rafaela Urtiga corporation 2024</p>
+        <p id="ultima-linha">Feito por Luana Karoline e Rafaela Urtiga ®corporation 2024</p>
     </nav>
     </div>
 
@@ -57,6 +60,6 @@
 
         
 </div>
-<footer> </footer>
+
 </body>
 </html>
