--- a/templates/tasks/cliente.html
+++ b/templates/tasks/cliente.html
@@ -129,7 +129,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for cliente in clientes %}
+                {% for clients in clientes %}
                 <tr>
                     <td>{{ cliente.nome }}</td>
                     <td>{{ cliente.cpf }}</td>
